--- a/src/app.html
+++ b/src/app.html
@@ -16,8 +16,8 @@
 		/>
 
 		<!-- Favicon -->
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="static/favicon-new.png" />
+		<link rel="apple-touch-icon" href="static/favicon-new.png" />
 
 		<!-- SvelteKit -->
 		%sveltekit.head%
