Ajout balise Google Search Console pour validation immédiate

--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,7 @@
 			content="Studio JBTH propose des sites web sur mesure, des créations graphiques impactantes et des ouvrages captivants. Un studio créatif à taille humaine, innovant et sensible."
 		/>
 		<meta name="author" content="Jean-Baptiste Tharrault" />
+		<meta name="google-site-verification" content="BZvCTsXjnxbl0Vl-YfrgyrBEdrPgrTLt6iHL6cSgp" />
 		<meta
 			name="keywords"
 			content="Studio JBTH, site web, graphisme, livres, développement, branding, création, design, auteur, futuriste, SvelteKit"
